fdo#64211 replace "%2F" to "/" in online (wiki) help URLs

It is not possible to create wiki pages with URLs that have %2F in
them. Help URLs contain %2F, when invoked from dialogs that are
based on .ui files, it seems this is the new HID syntax.

For example for Zoom dialog LibreOffice used to call
http://help.libreoffice.org/simpress/cui%2Fui%2Fzoomdialog%2Fzoomsb
and it did not work. Now it calls
http://help.libreoffice.org/simpress/cui/ui/zoomdialog/zoomsb
and it works.

Change-Id: I163cf8ec3b69f31eadbbd9085d2180839fe91e07